fixed animation overflow

--- a/src/index.css
+++ b/src/index.css
@@ -51,11 +51,13 @@ button[type="submit"] {
 .results {
   transition: 1s ease 0s;
   opacity: 1;
+  max-height: 750px;
+  overflow: hidden;
 }
 
 .results.hidden {
   opacity: 0;
-  height: 0;
+  max-height: 0;
 }
 
 .clearSearch {
